# pkg/pb/service.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate
-// source: github.com/kodesmil/go-patient-registry/pkg/pb/service.proto
+// source: github.com/kodesmil/manifests/pkg/pb/service.proto
 // DO NOT EDIT!!!
 
 package pb
@@ -137,10 +137,10 @@ func (m *JournalEntry) Validate() error {
 
 	// no validation rules for Note
 
-	if v, ok := interface{}(m.GetTimestamp()).(interface{ Validate() error }); ok {
+	if v, ok := interface{}(m.GetCreatedAt()).(interface{ Validate() error }); ok {
 		if err := v.Validate(); err != nil {
 			return JournalEntryValidationError{
-				field:  "Timestamp",
+				field:  "CreatedAt",
 				reason: "embedded message failed validation",
 				cause:  err,
 			}
@@ -1189,6 +1189,501 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = ListJournalSubjectResponseValidationError{}
+
+// Validate checks the field values on FeedTag with the rules defined in the
+// proto definition for this message. If any rules are violated, an error is returned.
+func (m *FeedTag) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if v, ok := interface{}(m.GetId()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return FeedTagValidationError{
+				field:  "Id",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	// no validation rules for Key
+
+	// no validation rules for Name
+
+	for idx, item := range m.GetFeedArticles() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return FeedTagValidationError{
+					field:  fmt.Sprintf("FeedArticles[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// FeedTagValidationError is the validation error returned by FeedTag.Validate
+// if the designated constraints aren't met.
+type FeedTagValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e FeedTagValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e FeedTagValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e FeedTagValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e FeedTagValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e FeedTagValidationError) ErrorName() string { return "FeedTagValidationError" }
+
+// Error satisfies the builtin error interface
+func (e FeedTagValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sFeedTag.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = FeedTagValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = FeedTagValidationError{}
+
+// Validate checks the field values on FeedAuthor with the rules defined in the
+// proto definition for this message. If any rules are violated, an error is returned.
+func (m *FeedAuthor) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if v, ok := interface{}(m.GetId()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return FeedAuthorValidationError{
+				field:  "Id",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	// no validation rules for Name
+
+	// no validation rules for ProfilePhotoUrl
+
+	// no validation rules for Bio
+
+	for idx, item := range m.GetFeedArticles() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return FeedAuthorValidationError{
+					field:  fmt.Sprintf("FeedArticles[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// FeedAuthorValidationError is the validation error returned by
+// FeedAuthor.Validate if the designated constraints aren't met.
+type FeedAuthorValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e FeedAuthorValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e FeedAuthorValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e FeedAuthorValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e FeedAuthorValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e FeedAuthorValidationError) ErrorName() string { return "FeedAuthorValidationError" }
+
+// Error satisfies the builtin error interface
+func (e FeedAuthorValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sFeedAuthor.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = FeedAuthorValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = FeedAuthorValidationError{}
+
+// Validate checks the field values on FeedArticle with the rules defined in
+// the proto definition for this message. If any rules are violated, an error
+// is returned.
+func (m *FeedArticle) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if v, ok := interface{}(m.GetId()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return FeedArticleValidationError{
+				field:  "Id",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if v, ok := interface{}(m.GetCreatedAt()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return FeedArticleValidationError{
+				field:  "CreatedAt",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	// no validation rules for Title
+
+	// no validation rules for Subtitle
+
+	// no validation rules for CoverPictureUrl
+
+	// no validation rules for Content
+
+	for idx, item := range m.GetFeedTags() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return FeedArticleValidationError{
+					field:  fmt.Sprintf("FeedTags[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if v, ok := interface{}(m.GetFeedAuthor()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return FeedArticleValidationError{
+				field:  "FeedAuthor",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	return nil
+}
+
+// FeedArticleValidationError is the validation error returned by
+// FeedArticle.Validate if the designated constraints aren't met.
+type FeedArticleValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e FeedArticleValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e FeedArticleValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e FeedArticleValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e FeedArticleValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e FeedArticleValidationError) ErrorName() string { return "FeedArticleValidationError" }
+
+// Error satisfies the builtin error interface
+func (e FeedArticleValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sFeedArticle.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = FeedArticleValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = FeedArticleValidationError{}
+
+// Validate checks the field values on ListFeedArticleRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *ListFeedArticleRequest) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if v, ok := interface{}(m.GetFilter()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ListFeedArticleRequestValidationError{
+				field:  "Filter",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if v, ok := interface{}(m.GetOrderBy()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ListFeedArticleRequestValidationError{
+				field:  "OrderBy",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if v, ok := interface{}(m.GetFields()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ListFeedArticleRequestValidationError{
+				field:  "Fields",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if v, ok := interface{}(m.GetPaging()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ListFeedArticleRequestValidationError{
+				field:  "Paging",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	return nil
+}
+
+// ListFeedArticleRequestValidationError is the validation error returned by
+// ListFeedArticleRequest.Validate if the designated constraints aren't met.
+type ListFeedArticleRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ListFeedArticleRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ListFeedArticleRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ListFeedArticleRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ListFeedArticleRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ListFeedArticleRequestValidationError) ErrorName() string {
+	return "ListFeedArticleRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ListFeedArticleRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sListFeedArticleRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ListFeedArticleRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ListFeedArticleRequestValidationError{}
+
+// Validate checks the field values on ListFeedArticleResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *ListFeedArticleResponse) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	for idx, item := range m.GetResults() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return ListFeedArticleResponseValidationError{
+					field:  fmt.Sprintf("Results[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// ListFeedArticleResponseValidationError is the validation error returned by
+// ListFeedArticleResponse.Validate if the designated constraints aren't met.
+type ListFeedArticleResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ListFeedArticleResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ListFeedArticleResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ListFeedArticleResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ListFeedArticleResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ListFeedArticleResponseValidationError) ErrorName() string {
+	return "ListFeedArticleResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ListFeedArticleResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sListFeedArticleResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ListFeedArticleResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ListFeedArticleResponseValidationError{}
 
 // Validate checks the field values on Profile with the rules defined in the
 // proto definition for this message. If any rules are violated, an error is returned.
